# flax-xor-demo

./: README.md  pyproject.toml  xor-demo.ipynb
